--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		}
 	},
 	"scripts": {
+		"format": "prettier --write ./src/**/*.ts",
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -p ./",
 		"lint": "eslint src --ext ts",
@@ -59,6 +60,7 @@
 		"@typescript-eslint/parser": "^4.1.1",
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
+		"prettier": "^2.1.2",
 		"typescript": "^4.0.2",
 		"vscode-test": "^1.4.0"
 	}
