--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,39 @@
 name: test
 
-on: [ push ]
+on:
+  push:
+    branches:
+        - master
 
 jobs:
   test:
+    runs-on: ${{ matrix.os }}
     strategy:
+      max-parallel: 3
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.platform }}
+        os: [ubuntu-18.04, macos-latest, windows-latest]
+        node-version: [10.x]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Setup Node
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: '10.x'
-
-      - name: install
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
         run: make install
 
+      - name: Start xvfb only if it's Linux
+        if: startsWith(matrix.os,'ubuntu')
+        run: |
+          /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          echo ">>> Started xvfb"
+        shell: bash
+
       - name: test
-        run: make test
+        run: |
+          npm test
+        env:
+          DISPLAY: ':99.0' # Only necessary for linux tests
 
       - name: package
         run: make package
